--- a/youtube.html
+++ b/youtube.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/general.css" />
     <link rel="stylesheet" href="styles/video.css" />
     <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/sidebar.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -45,6 +46,8 @@
         />
       </div>
     </div>
+
+    <div class="sidebar">sidebar</div>
 
     <div class="video-grid">
       <div class="video-preview">
