finished sidebar, tooltips

--- a/youtube.html
+++ b/youtube.html
@@ -26,6 +26,7 @@
         <input class="search_bar" type="text" placeholder="Search" />
         <button class="search_button">
           <img class="search_icon" src="icons/search.svg" alt="#" />
+          <div class="tooltip">Search</div>
         </button>
         <button class="voice_search_button">
           <img
@@ -33,38 +34,102 @@
             src="icons/voice-search-icon.svg"
             alt="#"
           />
+          <div class="tooltip">Search with your voice</div>
         </button>
       </div>
       <div class="right_section">
-        <img class="upload_icon" src="icons/upload.svg" alt="#" />
-        <img class="youtube_apps_icon" src="icons/youtube-apps.svg" alt="#" />
-        <img class="notifications_icon" src="icons/notifications.svg" alt="#" />
-        <img
-          class="channel_user_picture"
-          src="channel-pictures/my-channel.jpeg"
-          alt="#"
-        />
+        <div class="upload_icon_container">
+          <img class="upload_icon" src="icons/upload.svg" alt="#" />
+          <div class="tooltip">Create</div>
+        </div>
+        <div class="youtube_apps_icon_container">
+          <img class="youtube_apps_icon" src="icons/youtube-apps.svg" alt="#" />
+          <div class="tooltip">Youtube apps</div>
+        </div>
+        <div class="notification_icon_container">
+          <img
+            class="notifications_icon"
+            src="icons/notifications.svg"
+            alt="#"
+          />
+          <div class="tooltip">Notifications</div>
+          <div class="notifications_count">3</div>
+        </div>
+        <div class="channel_user_picture_container">
+          <img
+            class="channel_user_picture"
+            src="channel-pictures/my-channel.jpeg"
+            alt="#"
+          />
+          <div class="tooltip">Profile</div>
+        </div>
       </div>
     </div>
 
-    <div class="sidebar">sidebar</div>
+    <div class="sidebar">
+      <div class="sidebar_link">
+        <img src="icons/home.svg" alt="" />
+        <div>Home</div>
+      </div>
+      <div class="sidebar_link">
+        <img src="icons/explore.svg" alt="" />
+        <div>Explore</div>
+      </div>
+      <div class="sidebar_link">
+        <img src="icons/subscriptions.svg" alt="" />
+        <div>Subscriptions</div>
+      </div>
+      <div class="sidebar_link">
+        <img src="icons/originals.svg" alt="" />
+        <div>Originals</div>
+      </div>
+      <div class="sidebar_link">
+        <img src="icons/youtube-music.svg" alt="" />
+        <div>YouTube Music</div>
+      </div>
+      <div class="sidebar_link">
+        <img src="icons/library.svg" alt="" />
+        <div>Library</div>
+      </div>
+    </div>
 
     <div class="video-grid">
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-1.webp" />
+          <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <img class="thumbnail" src="thumbnails/thumbnail-1.webp" />
+          </a>
+          <div class="video-time">14:20</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
-            <img
-              class="profile-picture"
-              src="channel-pictures/channel-1.jpeg"
-            />
+            <a href="https://www.youtube.com/@mkbhd">
+              <img
+                class="profile-picture"
+                src="channel-pictures/channel-1.jpeg"
+              />
+            </a>
+
+            <div class="channel_tooltip_absolute">
+              <div class="channel_tooltip_icon">
+                <img
+                  class="tooltip_profile_picture"
+                  src="channel-pictures/channel-1.jpeg"
+                  alt="#"
+                />
+              </div>
+              <div class="channel_tooltip_text">
+                <p class="channel_tooltip_title">Marques Brownlee</p>
+                <p class="channel_tooltip_subscribers">15M subscribers</p>
+              </div>
+            </div>
           </div>
           <div class="video-info">
-            <p class="video-title">
-              Talking Tech and AI with Google CEO Sundar Pichai!
-            </p>
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+              <p class="video-title">
+                Talking Tech and AI with Google CEO Sundar Pichai!
+              </p>
+            </a>
             <p class="video-author">Marques Brownlee</p>
             <p class="video-stats">3.4M views &#183; 6 months ago</p>
           </div>
@@ -73,17 +138,38 @@
 
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-2.webp" />
+          <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk">
+            <img class="thumbnail" src="thumbnails/thumbnail-2.webp" />
+          </a>
+          <div class="video-time">8:22</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
-            <img
-              class="profile-picture"
-              src="channel-pictures/channel-2.jpeg"
-            />
+            <a href="https://www.youtube.com/@markiplier">
+              <img
+                class="profile-picture"
+                src="channel-pictures/channel-2.jpeg"
+              />
+            </a>
+
+            <div class="channel_tooltip_absolute">
+              <div class="channel_tooltip_icon">
+                <img
+                  class="tooltip_profile_picture"
+                  src="channel-pictures/channel-2.jpeg"
+                  alt="#"
+                />
+              </div>
+              <div class="channel_tooltip_text">
+                <p class="channel_tooltip_title">Markiplier</p>
+                <p class="channel_tooltip_subscribers">34M subscribers</p>
+              </div>
+            </div>
           </div>
           <div class="video-info">
-            <p class="video-title">Try Not To Laugh Challenge #9</p>
+            <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk">
+              <p class="video-title">Try Not To Laugh Challenge #9</p>
+            </a>
             <p class="video-author">Markiplier</p>
             <p class="video-stats">19M views &#183; 4 years ago</p>
           </div>
@@ -92,20 +178,41 @@
 
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-3.webp" />
+          <a href="https://www.youtube.com/watch?v=jHGuXMzaARY">
+            <img class="thumbnail" src="thumbnails/thumbnail-3.webp" />
+          </a>
+          <div class="video-time">1:27</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
-            <img
-              class="profile-picture"
-              src="channel-pictures/channel-3.jpeg"
-            />
+            <a href="https://www.youtube.com/@lexfridman">
+              <img
+                class="profile-picture"
+                src="channel-pictures/channel-3.jpeg"
+              />
+            </a>
+
+            <div class="channel_tooltip_absolute">
+              <div class="channel_tooltip_icon">
+                <img
+                  class="tooltip_profile_picture"
+                  src="channel-pictures/channel-3.jpeg"
+                  alt="#"
+                />
+              </div>
+              <div class="channel_tooltip_text">
+                <p class="channel_tooltip_title">Lex Fridman</p>
+                <p class="channel_tooltip_subscribers">2.41M subscribers</p>
+              </div>
+            </div>
           </div>
           <div class="video-info">
-            <p class="video-title">
-              Joe Rogan recommends Lex Fridman: Neil deGrasse Tyson is having
-              none of it
-            </p>
+            <a href="https://www.youtube.com/watch?v=jHGuXMzaARY">
+              <p class="video-title">
+                Joe Rogan recommends Lex Fridman: Neil deGrasse Tyson is having
+                none of it
+              </p>
+            </a>
             <p class="video-author">Lex Fridman</p>
             <p class="video-stats">932,840 views &#183; 2 days ago</p>
           </div>
@@ -114,19 +221,40 @@
 
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-4.webp" />
+          <a href="https://www.youtube.com/watch?v=6XflAlg-BEg">
+            <img class="thumbnail" src="thumbnails/thumbnail-4.webp" />
+          </a>
+          <div class="video-time">1:11:34</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
-            <img
-              class="profile-picture"
-              src="channel-pictures/channel-4.jpeg"
-            />
+            <a href="https://www.youtube.com/@thememoriesofwind7651">
+              <img
+                class="profile-picture"
+                src="channel-pictures/channel-4.jpeg"
+              />
+            </a>
+
+            <div class="channel_tooltip_absolute">
+              <div class="channel_tooltip_icon">
+                <img
+                  class="tooltip_profile_picture"
+                  src="channel-pictures/channel-4.jpeg"
+                  alt="#"
+                />
+              </div>
+              <div class="channel_tooltip_text">
+                <p class="channel_tooltip_title">The Memories of Wind</p>
+                <p class="channel_tooltip_subscribers">13.8M subscribers</p>
+              </div>
+            </div>
           </div>
           <div class="video-info">
-            <p class="video-title">
-              🎄❄️Beautiful Christmas Music🎄❄️Merry Christmas
-            </p>
+            <a href="https://www.youtube.com/watch?v=6XflAlg-BEg">
+              <p class="video-title">
+                🎄❄️Beautiful Christmas Music🎄❄️Merry Christmas
+              </p>
+            </a>
             <p class="video-author">The Memories of Wind</p>
             <p class="video-stats">538,758 views &#183; 11 months ago</p>
           </div>
@@ -135,17 +263,38 @@
 
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-5.webp" />
+          <a href="https://www.youtube.com/watch?v=xBfP-Jm3u_8">
+            <img class="thumbnail" src="thumbnails/thumbnail-5.webp" />
+          </a>
+          <div class="video-time">27:45</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
-            <img
-              class="profile-picture"
-              src="channel-pictures/channel-5.jpeg"
-            />
+            <a href="https://www.youtube.com/@HasanabiProductions">
+              <img
+                class="profile-picture"
+                src="channel-pictures/channel-5.jpeg"
+              />
+            </a>
+
+            <div class="channel_tooltip_absolute">
+              <div class="channel_tooltip_icon">
+                <img
+                  class="tooltip_profile_picture"
+                  src="channel-pictures/channel-5.jpeg"
+                  alt="#"
+                />
+              </div>
+              <div class="channel_tooltip_text">
+                <p class="channel_tooltip_title">Hasanabi Productions</p>
+                <p class="channel_tooltip_subscribers">99.3k subscribers</p>
+              </div>
+            </div>
           </div>
           <div class="video-info">
-            <p class="video-title">Hasanabi reacts to Ye getting ROASTED</p>
+            <a href="https://www.youtube.com/watch?v=xBfP-Jm3u_8">
+              <p class="video-title">Hasanabi reacts to Ye getting ROASTED</p>
+            </a>
             <p class="video-author">Hasanabi Productions</p>
             <p class="video-stats">21,718 views &#183; 1 hour ago</p>
           </div>
@@ -154,19 +303,41 @@
 
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-6.webp" />
+          <a href="https://www.youtube.com/watch?v=FR07idGIMAE">
+            <img class="thumbnail" src="thumbnails/thumbnail-6.webp" />
+          </a>
+          <div class="video-time">17:32</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
-            <img
-              class="profile-picture"
-              src="channel-pictures/channel-6.jpeg"
-            />
+            <a href="https://www.youtube.com/@Zeyfra">
+              <img
+                class="profile-picture"
+                src="channel-pictures/channel-6.jpeg"
+              />
+            </a>
+
+            <div class="channel_tooltip_absolute">
+              <div class="channel_tooltip_icon">
+                <img
+                  class="tooltip_profile_picture"
+                  src="channel-pictures/channel-6.jpeg"
+                  alt="#"
+                />
+              </div>
+              <div class="channel_tooltip_text">
+                <p class="channel_tooltip_title">Zeyfra</p>
+                <p class="channel_tooltip_subscribers">870 subscribers</p>
+              </div>
+            </div>
           </div>
           <div class="video-info">
-            <p class="video-title">
-              React Recursive Component: How to Use It and Why You SHOULD Use It
-            </p>
+            <a href="https://www.youtube.com/watch?v=FR07idGIMAE">
+              <p class="video-title">
+                React Recursive Component: How to Use It and Why You SHOULD Use
+                It
+              </p>
+            </a>
             <p class="video-author">Zeyfra</p>
             <p class="video-stats">5 views &#183; 3 hours ago</p>
           </div>
